--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,8 @@ gateway.ip=192.168.138.128
 token.expiration_time=300000
 token.secret=secretkey1234
 login.url.path=/users/login
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=sanket
+spring.rabbitmq.password=sanket
